--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.11"
-    , "stylus": ">= 0.0.1"
-    , "jade": ">= 0.0.1"
+  "name": "ctchme",
+  "version": "0.0.1",
+  "dependencies": {
+    "express": "2.5.11",
+    "stylus": ">= 0.0.1",
+    "jade": ">= 0.0.1"
+  },
+  "subdomain": "ctchme",
+  "scripts": {
+    "start": "app.js"
+  },
+  "engines": {
+    "node": "0.6.x"
   }
 }
